--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,5 +23,6 @@
         <li><a href="magic">magic</a></li>
         <li><a href="rappers">rappers</a></li>
     </ul>
+    <p><%= Date.now() %></p>
 </body>
 </html>
